k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-ingress
spec:
  rules:
  - host: jiangnan10.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-service
            port:
              number: 5000

  - host: music.jiangnan10.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: music-service
            port:
              number: 7478
